--- a/app/Gemfile
+++ b/app/Gemfile
@@ -44,6 +44,8 @@ gem 'kaminari'
 
 # Image uploader
 gem 'carrierwave', '~> 2.0'
+gem 'mini_magick'
+gem 'ckeditor'
 
 # Admin
 gem 'rails_admin', '~> 2.0'
