--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
                   rm -f /app/tmp/pids/server.pid &&
                   rails s puma -p 3000 -b '0.0.0.0'"
     user: ${CURRENT_UID}
+    tty: true
+    stdin_open: true
 
   db:
     image: mysql:5.7
